<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Pirate_Place_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/Pirate_place_ScTech" />
    <TextView
        android:id="@+id/Pirate_Person_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/Pirate_person_ScTech" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Previous_button" />

        <Button
            android:id="@+id/Next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next_button" />

    </LinearLayout>




</LinearLayout>