<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="edu.ecu.cs.pirateplaces.CheckActivity">

    <TextView
        android:id="@+id/Check_Place_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/Pirate_place_ScTech" />

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/Pirate"
        />

    <Button
        android:id="@+id/Check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check_button"/>

</LinearLayout>